# dataBased

./: README.md
Documentation/: README.md
Documentation/Meeting Logs/: 020725.md
Part 1/: Team19_Part1.md
documentation/: README.md
documentation/meeting_logs/: 020725.md  021425.md  022125.md  022825.md  030725.md  031025.md  031425.md  032425.md  032825.md  042025.md  042725.md
meeting_logs/: 020725.md  README.md
part_1/: Team19_Part1.md
part_2/: Team19_Part2.md
part_3/: ERDiagram_Source.md  Team19_Part3.md
part_4/: Team19_Part4.md  databaseschemasource.md  databasetable.md
part_5/: Team19_Part5.md  database_output.md
part_5/source_code/: Cargo.toml  README.md
part_5/source_code/src/: main.rs  main.rs.orig
part_6/: Team19_Part6.md
